@@ -178,7 +178,7 @@ public class CategoryREST {
 		boolean hasMore = entries.getEntries().size() > limit;
 		if (hasMore) {
 			entries.setHasMore(true);
-			entries.getEntries().remove(entries.getEntries().size() - 1);
+			entries.getEntries().removeLast();
 		}
 
 		entries.setTimestamp(System.currentTimeMillis());
@@ -337,7 +337,7 @@ public class CategoryREST {
 		}
 
 		FeedCategory parent = null;
-		if (req.getParentId() != null && !CategoryREST.ALL.equals(req.getParentId())
+		if (req.getParentId() != null && !ALL.equals(req.getParentId())
 				&& !Strings.CS.equals(req.getParentId(), String.valueOf(req.getId()))) {
 			parent = feedCategoryDAO.findById(user, Long.valueOf(req.getParentId()));
 		}
